Fixed spacing

--- a/src/sass/_theme.scss
+++ b/src/sass/_theme.scss
@@ -3,26 +3,30 @@ $tdbc-color-secondary: #db0a76 !default;
 $tdbc-color-background: #f9f9f9;
 
 $tdbc-brand-colors: (
-  "primary": $tdbc-color-primary,
-  "secondary": $tdbc-color-secondary,
+    "primary": $tdbc-color-primary,
+    "secondary": $tdbc-color-secondary,
 ) !default;
 
-$tdbc-color-body: scale-color($tdbc-color-primary, $lightness: -30%, $saturation: -50%) !default;
+$tdbc-color-body: scale-color(
+    $tdbc-color-primary,
+    $lightness: -30%,
+    $saturation: -50%
+) !default;
 $tdbc-color-gray: mix(#767676, $tdbc-color-body, 70%) !default;
 
 $tdbc-colors: map-merge(
-  $tdbc-brand-colors,
-  (
-    "text": $tdbc-color-body,
-    "background": $tdbc-color-background,
-    "light": #fff,
-    "dark": rgba(black, 0.87),
-    "gray": $tdbc-color-gray,
-  )
+    $tdbc-brand-colors,
+    (
+        "text": $tdbc-color-body,
+        "background": $tdbc-color-background,
+        "light": #fff,
+        "dark": rgba(black, 0.87),
+        "gray": $tdbc-color-gray,
+    )
 );
 
 @function tdbc-color($key) {
-  @return map-get($tdbc-colors, $key);
+    @return map-get($tdbc-colors, $key);
 }
 
 // Add/remove to selectively generate `ink` (text color) classes
@@ -45,9 +49,9 @@ $tdbc-text-font-size: 1.15rem !default;
 $tdbc-lead-font-size: 1.35rem !default;
 
 $tdbc-spacing: (
-  sm: 1rem,
-  md: 3rem,
-  lg: 6rem,
-  xl: 10rem,
-  auto: "auto",
+    sm: 1rem,
+    md: 3rem,
+    lg: 6rem,
+    xl: 10rem,
+    auto: "auto",
 ) !default;
